# pyanalyze

./: .gitignore  PYANALYZE_COMPLETE_BUILD_PLAN.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile  app.py  demo_result.json  render.yaml
benchmarks/: repos.json  run_benchmarks.py
src/: callgraph.py  cli.py  export.py  imports.py  metrics.py  parser.py  slicer.py
tests/: test_callgraph.py  test_cli.py  test_export.py  test_imports.py  test_metrics.py  test_parser.py  test_slicer.py
tests/fixtures/: simple_module.py
tests/fixtures/demo_repo/: config.py  parser.py  scraper.py  storage.py  utils.py
tests/fixtures/multi_file_repo/: main.py  utils.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/components/: CallGraph.jsx  CodeInput.jsx  ExportButton.jsx  FunctionList.jsx  MetricsPanel.jsx  SliceView.jsx
web/src/hooks/: useAnalysis.js
web/src/utils/: graphLayout.js
